// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button onClick function works as expected 1`] = `
<button
  className="css-14uyppl"
  id="btn-click-here"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Click here
</button>
`;

exports[`Button rendered with unique id passed from props 1`] = `
<button
  className="css-14uyppl"
  id="btn-click-here"
>
  Click here
</button>
`;
